testdata/baselines/reference/submodule/conformance/importTag7.errors.txt
/foo.js(2,4): error TS8006: 'import type' declarations can only be used in TypeScript files.
/foo.js(8,12): error TS8010: Type annotations can only be used in TypeScript files.
/foo.js(9,12): error TS8010: Type annotations can only be used in TypeScript files.


==== /types.ts (0 errors) ====
    export interface A {
        a: number;
    }
    export interface B {
        a: number;
    }
    
==== /foo.js (3 errors) ====
    /**
     * @import {
       ~~~~~~~~~
     * A,
    ~~~~~
     * B } from "./types"
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS8006: 'import type' declarations can only be used in TypeScript files.
     */
    
    /**
     * @param { A } a
               ~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @param { B } b
               ~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    function f(a, b) {}
    